build.log
file:///home/runner/work/amherst-display/amherst-display/scripts/build_all.mjs:10
import { buildMHLStandings, buildBSHLStandings } from './standings.mjs';
                            ^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module './standings.mjs' does not provide an export named 'buildBSHLStandings'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:213:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:320:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.19.5
